--- a/index.html
+++ b/index.html
@@ -8,25 +8,24 @@
     
 </head>
 <body>
-   <header>
-        <div class="navbar">
-            <div class="container">
-                <h1>Hospitality Help Hub</h1>
-                <input type="checkbox" id="nav-toggle" class="nav-toggle">
-                <nav>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="owners.html">Owners</a></li>
-                        <li><a href="managers.html">Managers</a></li>
-                        <li><a href="staff.html">Staff</a></li>
-                    </ul>
-                </nav>
-                <label for="nav-toggle" class="nav-toggle-label">
-                    <span></span>
-                </label>
-            </div>
-        </div>
-    </header>
+  <header>
+    <div class="navbar">
+        <h1>Hospitality Help Hub</h1>
+        <input type="checkbox" id="nav-toggle" class="nav-toggle" aria-hidden="true">
+        <label for="nav-toggle" class="nav-toggle-label">
+            <span></span>
+        </label>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="owners.html">Owners</a></li>
+                <li><a href="managers.html">Managers</a></li>
+                <li><a href="staff.html">Staff</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
+
     <main>
         <section class="hero" style="background-image: url('Images/helpdesk.webp');">
             <div class="container">
@@ -70,3 +69,4 @@
     </footer>
 </body>
 </html>
+ 
