--- a/staff.html
+++ b/staff.html
@@ -8,15 +8,23 @@
 </head>
 <body>
     <header>
-        <h1>Hospitality Help for Staff</h1>
+    <div class="navbar">
+        <h1>Hospitality Help Hub</h1>
+        <input type="checkbox" id="nav-toggle" class="nav-toggle">
+        <label for="nav-toggle" class="nav-toggle-label">
+            <span></span>
+        </label>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="owners.html">Owners</a></li>
                 <li><a href="managers.html">Managers</a></li>
+                <li><a href="staff.html">Staff</a></li>
             </ul>
         </nav>
-    </header>
+    </div>
+</header>
+
     <main>
         <section>
             <h2>Resources for Hospitality Staff</h2>
