--- a/index.html
+++ b/index.html
@@ -5,26 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to Hospitality Help Hub</title>
     <link rel="stylesheet" href="style.css">
-    
 </head>
 <body>
-  <header>
-    <div class="navbar">
-        <h1>Hospitality Help Hub</h1>
-        <input type="checkbox" id="nav-toggle" class="nav-toggle" aria-hidden="true">
-        <label for="nav-toggle" class="nav-toggle-label">
-            <span></span>
-        </label>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="owners.html">Owners</a></li>
-                <li><a href="managers.html">Managers</a></li>
-                <li><a href="staff.html">Staff</a></li>
-            </ul>
-        </nav>
-    </div>
-</header>
+    <header>
+        <div class="navbar">
+            <h1>Hospitality Help Hub</h1>
+            <input type="checkbox" id="nav-toggle" class="nav-toggle" aria-hidden="true">
+            <label for="nav-toggle" class="nav-toggle-label">
+                <span></span>
+            </label>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="owners.html">Owners</a></li>
+                    <li><a href="managers.html">Managers</a></li>
+                    <li><a href="staff.html">Staff</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
     <main>
         <section class="hero" style="background-image: url('Images/helpdesk.webp');">
@@ -36,32 +35,48 @@
         <section class="content">
             <div class="container">
                 <article class="article-left">
-                    <img src="Images/challenge food.jpeg" alt="Industry Challenges">
-                    <div class="text-content">
+                    <div class="image-side">
+                        <img src="Images/challenge food.jpeg" alt="Industry Challenges">
+                        <div class="overlay">
+                            <p>"Every challenge leads to growth."</p>
+                        </div>
+                    </div>
+                    <div class="text-side">
                         <h3>Overcoming Industry Challenges</h3>
-                        <p>Industry challenges are a natural part of growth. Understanding and adapting to these changes is key. This section is dedicated to owners and senior management, focusing on strategic planning and market adaptation.</p>
+                        <p>Adapt and thrive amid industry shifts. Explore strategies for resilience and success.</p>
                         <a href="owners.html">Advice for Owners</a> | <a href="managers.html">Guidance for Managers</a>
                     </div>
                 </article>
                 <article class="article-right">
-                    <img src="Images/resilince.jpeg" alt="Resilience Resources">
-                    <div class="text-content">
+                    <div class="image-side">
+                        <img src="Images/resilince.jpeg" alt="Resilience Resources">
+                        <div class="overlay">
+                            <p>"Build resilience to navigate through the toughest times."</p>
+                        </div>
+                    </div>
+                    <div class="text-side">
                         <h3>Resources for Resilience</h3>
-                        <p>Building resilience is vital for every team member. Here, staff can find resources on personal development, stress management, and skill enhancement.</p>
+                        <p>Empower yourself with resources for personal and professional development.</p>
                         <a href="staff.html">Support for Staff</a>
                     </div>
                 </article>
                 <article class="article-left">
-                    <img src="Images/team strenght.jpeg" alt="Community Support">
-                    <div class="text-content">
+                    <div class="image-side">
+                        <img src="Images/team strenght.jpeg" alt="Community Support">
+                        <div class="overlay">
+                            <p>"Together, we can overcome any obstacle."</p>
+                        </div>
+                    </div>
+                    <div class="text-side">
                         <h3>Community Support</h3>
-                        <p>Our community is our strength. Whether you're an owner, manager, or staff member, find out how to engage effectively with your peers and build a supportive network.</p>
+                        <p>Engage with your peers and build a supportive network.</p>
                         <a href="community.html">Join Our Community</a>
                     </div>
                 </article>
             </div>
         </section>
     </main>
+
     <footer>
         <div class="container">
             <p>&copy; 2023 Hospitality Help Hub. All rights reserved.</p>
@@ -69,4 +84,3 @@
     </footer>
 </body>
 </html>
- 
