all 4 pages and popup

--- a/managers.html
+++ b/managers.html
@@ -32,7 +32,7 @@
 </header>
 
     <main>
-        <section class="hero" style="background-image: url('Images/manager-hero.jpg');">
+        <section class="hero" style="background-image: url('Images/helpdesk.webp');">
             <div class="container">
                 <h2>Welcome, Hospitality Managers</h2>
                 <p>Discover key strategies and insights to enhance your management skills and improve your establishment's performance.</p>
@@ -41,27 +41,36 @@
         <section class="content">
             <div class="container">
                 <article class="article-left">
-                    <img src="Images/team-building image" alt="Team Building">
-                    <div class="text-content">
+                    <div class="image-side">
+                        <img src="Images/Reality-HR-team-building-1024x624.webp" alt="Team Building">
+                        <div class="overlay">Team Building Insights</div>
+                    </div>
+                    <div class="text-side">
                         <h3>Building and Leading Effective Teams</h3>
                         <p>Learn the art of team building and leadership in the hospitality industry. Explore methods to motivate your team, foster a collaborative environment, and manage diverse groups effectively for optimal performance.</p>
                         <a href="team-building.html">Team Building Techniques</a>
                     </div>
                 </article>
                 <article class="article-right">
-                    <img src="Images/customer image" alt="Customer Service Excellence">
-                    <div class="text-content">
+                    <div class="image-side">
+                        <img src="Images/unhappy-guest-client-or-tourist-is-leaving-hotel-vector-cartoon-stick-figure-illustration-2HJC1M2.jpeg" alt="Customer Service Excellence">
+                        <div class="overlay">Customer Service Excellence</div>
+                    </div>
+                    <div class="text-side">
                         <h3>Enhancing Customer Service</h3>
                         <p>Customer service excellence is key to success. Gain insights into delivering outstanding customer experiences, handling customer feedback constructively, and implementing service improvements that make a difference.</p>
-                        <a href="customer-service.html">Customer Service Tips</a>
+                         <a href="customer-service.html">Customer Service Tips</a>
                     </div>
                 </article>
                 <article class="article-left">
-                    <img src="Images/operationa image" alt="Operational Efficiency">
-                    <div class="text-content">
+                    <div class="image-side">
+                        <img src="Images/oprtn_efficncy.jpeg" alt="Operational Efficiency">
+                        <div class="overlay">Operational Efficiency</div>
+                    </div>
+                    <div class="text-side">
                         <h3>Optimizing Operational Efficiency</h3>
                         <p>Maximize the efficiency of your operations with these best practices. From streamlining processes to utilizing technology effectively, discover ways to increase productivity while maintaining high-quality standards.</p>
-                        <a href="operational-tips.html">Operational Efficiency Tips</a>
+                       <a href="operational-tips.html">Operational Efficiency Tips</a>
                     </div>
                 </article>
             </div>
