--- a/owners.html
+++ b/owners.html
@@ -8,22 +8,22 @@
 </head>
 <body>
     <header>
-    <div class="navbar">
-        <h1>Hospitality Help Hub</h1>
-        <input type="checkbox" id="nav-toggle" class="nav-toggle">
-        <label for="nav-toggle" class="nav-toggle-label">
-            <span></span>
-        </label>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="owners.html">Owners</a></li>
-                <li><a href="managers.html">Managers</a></li>
-                <li><a href="staff.html">Staff</a></li>
-            </ul>
-        </nav>
-    </div>
-</header>
+        <div class="navbar">
+            <h1>Hospitality Help Hub</h1>
+            <input type="checkbox" id="nav-toggle" class="nav-toggle">
+            <label for="nav-toggle" class="nav-toggle-label">
+                <span></span>
+            </label>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="owners.html">Owners</a></li>
+                    <li><a href="managers.html">Managers</a></li>
+                    <li><a href="staff.html">Staff</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
     <main>
         <section class="hero" style="background-image: url('Images/helpdesk.webp');">
@@ -35,24 +35,39 @@
         <section class="content">
             <div class="container">
                 <article class="article-left">
-                    <img src="Images/Strategy-Chess.png" alt="Business Strategy">
-                    <div class="text-content">
+                    <div class="image-side">
+                        <img src="Images/Strategy-Chess.png" alt="Business Strategy">
+                        <div class="overlay">
+                            <p>"Plan strategically for success."</p>
+                        </div>
+                    </div>
+                    <div class="text-side">
                         <h3>Strategic Planning and Adaptation</h3>
                         <p>In the dynamic field of hospitality, strategic planning and adaptation are crucial. Explore ways to align your business strategy with market trends, innovate service offerings, and make data-driven decisions for sustainable growth. Connect with industry experts for insights.</p>
                         <a href="strategy-resources.html">Strategic Resources</a>
                     </div>
                 </article>
                 <article class="article-right">
-                    <img src="Images/Restaurant-Management-Skills.png" alt="Marketing Trends">
-                    <div class="text-content">
+                    <div class="image-side">
+                        <img src="Images/Restaurant-Management-Skills.png" alt="Marketing Trends">
+                        <div class="overlay">
+                            <p>"Embrace marketing innovation."</p>
+                        </div>
+                    </div>
+                    <div class="text-side">
                         <h3>Embracing New Marketing Trends</h3>
                         <p>Understanding and implementing the latest marketing trends can set your business apart. Dive into digital marketing techniques, social media engagement strategies, and customer relationship management to enhance your brand's visibility and customer loyalty.</p>
                         <a href="marketing-insights.html">Marketing Insights</a>
                     </div>
                 </article>
                 <article class="article-left">
-                    <img src="Images/staff training.jpg" alt="Staff Management">
-                    <div class="text-content">
+                    <div class="image-side">
+                        <img src="Images/staff training.jpg" alt="Staff Management">
+                        <div class="overlay">
+                            <p>"Cultivate a skilled and motivated team."</p>
+                        </div>
+                    </div>
+                    <div class="text-side">
                         <h3>Effective Staff Management</h3>
                         <p>The success of your business greatly depends on your staff. Learn about effective staff training programs, motivational strategies, and ways to foster a positive work environment that ensures high productivity and job satisfaction.</p>
                         <a href="staff-management-tips.html">Staff Management Tips</a>
@@ -61,6 +76,7 @@
             </div>
         </section>
     </main>
+
     <footer>
         <div class="container">
             <p>&copy; 2023 Hospitality Help Hub. All rights reserved.</p>
