--- a/staff.html
+++ b/staff.html
@@ -8,29 +8,89 @@
 </head>
 <body>
     <header>
-    <div class="navbar">
-        <h1>Hospitality Help Hub</h1>
-        <input type="checkbox" id="nav-toggle" class="nav-toggle">
-        <label for="nav-toggle" class="nav-toggle-label">
-            <span></span>
-        </label>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="owners.html">Owners</a></li>
-                <li><a href="managers.html">Managers</a></li>
-                <li><a href="staff.html">Staff</a></li>
-            </ul>
-        </nav>
-    </div>
-</header>
+        <div class="navbar">
+            <h1>Hospitality Help Hub</h1>
+            <input type="checkbox" id="nav-toggle" class="nav-toggle" aria-hidden="true">
+            <label for="nav-toggle" class="nav-toggle-label">
+                <span></span>
+            </label>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="owners.html">Owners</a></li>
+                    <li><a href="managers.html">Managers</a></li>
+                    <li><a href="staff.html">Staff</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
     <main>
-        <section>
-            <h2>Resources for Hospitality Staff</h2>
-            <p>Support and advice for those working in the hospitality sector...</p>
-            <!-- Additional content and links go here -->
+        <section class="hero" style="background-image: url('Images/helpdesk.webp');">
+            <div class="container">
+                <h2>Support and Resources for Hospitality Staff</h2>
+                <p>Finding strength in challenging times – resources, advice, and community for hospitality staff.</p>
+            </div>
+        </section>
+ <section class="intro">
+            <div class="container">
+                <div class="intro-text">
+                    <h2>Understanding the Realities and Embracing the Joys of Hospitality</h2>
+                    <p>In the bustling and vibrant world of hospitality, we often find ourselves riding a rollercoaster of experiences – from the thrill of a busy service to the challenges of long hours and high pressure. It's important to acknowledge that struggling with mental health in this industry is not only common; it's an experience shared by many. It's a reality that touches the lives of chefs, servers, managers, and everyone in between. But why is this so prevalent, and what can we do about it?</p>
+
+                    <h3>The Challenges</h3>
+                    <p>Hospitality, by its very nature, demands a lot. Long shifts that stretch into late hours, the constant pursuit of perfection, and the high expectations of customers can take a toll on even the most resilient individuals. The physical demands of being on your feet all day, combined with the mental strain of multitasking and maintaining customer satisfaction, create a perfect storm for stress and burnout.</p>
+                    <p>The industry also faces unique social dynamics. The pressure to perform and compete, sometimes in environments with limited resources, can lead to a culture where it's hard to speak up about personal struggles. The stigma around mental health issues only exacerbates the problem, making it difficult for those who are suffering to seek the help they need.</p>
+
+                    <h3>The Bright Side</h3>
+                    <p>Yet, amidst these challenges, the hospitality industry offers some of the most rewarding experiences. There's an undeniable camaraderie that comes with working in a team, a sense of pride in creating memorable experiences for guests, and the joy of mastering the art of service and culinary excellence. Hospitality is not just a job; it's a passion, a lifestyle, a community.</p>
+                    <p>The industry's dynamic environment fosters creativity and innovation. It's a space where one can constantly learn and grow, not just professionally but personally. The diversity of people you meet, the opportunity to impact someone's day positively, and the ability to create and innovate are unparalleled.</p>
+
+                    <h3>Moving Forward</h3>
+                    <p>So, what can we do to nurture our mental health in such a demanding yet rewarding field? Firstly, recognizing that it's okay not to be okay is a vital step. Mental health struggles are normal, and facing them does not diminish your strength or capability.</p>
+                    <p>Organizations like <a class="text-anchor" href="https://www.theburntchefproject.com" target="_blank">The Burnt Chef Project</a> provide invaluable resources and support for those in the hospitality industry facing mental health challenges. They offer tools like self-care posters, podcasts discussing well-being, and platforms for open conversations about mental health in the workplace.</p>
+                    <p>Additionally, understanding the impact of staff turnover and the importance of a positive work environment is crucial. Websites like <a class="text-anchor" href="https://www.theworkwall.com/the-hidden-costs-of-staff-turnover-and-top-3-ways-to-prevent-it" target="_blank">WorkWall</a> offer insights into the hidden costs of staff turnover and the significance of employee happiness.</p>
+
+                    <h3>Conclusion</h3>
+                    <p>In conclusion, while the hospitality industry presents its unique set of challenges, it also offers immense rewards and opportunities for growth. By acknowledging and addressing the mental health challenges prevalent in the industry, and celebrating the positives, we can create a more supportive, enjoyable, and sustainable working environment for everyone.</p>
+                </div></div>
+        </section>
+        <section class="content">
+            <div class="container">
+                <article class="article-left">
+                    <div class="image-side">
+                        <img src="Images/burnt chef logo2.jpeg" alt="The Burnt Chef Project">
+                        <div class="overlay">
+                            <p>"Empowering mental health support."</p>
+                        </div>
+                    </div>
+                    <div class="text-side">
+                        <h3>The Burnt Chef Project</h3>
+                        <p>Dedicated to challenging mental health stigma in hospitality, The Burnt Chef Project offers resources and support. From self-care posters to podcasts discussing well-being, find tools to nurture your mental health. <a class="text-anchor" href="https://www.theburntchefproject.com" target="_blank">Visit The Burnt Chef Project</a>.</p>
+                    </div>
+                </article>
+
+                <article class="article-right">
+                    <div class="image-side">
+                        <img class="workwall-logo" src="Images/workwall.jpg" alt="WorkWall logo">
+                        <div class="overlay">
+                            <p>"Your voice matters in the workplace."</p>
+                        </div>
+                    </div>
+                    <div class="text-side">
+                        <h3>Speak Up About Workplace Challenges</h3>
+                        <p>Struggling with management? It's crucial to address workplace issues for your well-being. Learn the importance of staff happiness and the hidden costs of staff turnover at <a class="text-anchor" href="https://www.theworkwall.com/the-hidden-costs-of-staff-turnover-and-top-3-ways-to-prevent-it" target="_blank">WorkWall</a>. Your happiness is key to a thriving workplace.</p>
+                    </div>
+                </article>
+                <!-- Additional articles and resources can be added here -->
+            </div>
         </section>
     </main>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2023 Hospitality Help Hub. All rights reserved.</p>
+        </div>
+    </footer>
 </body>
 </html>
