--- a/index.html
+++ b/index.html
@@ -3,28 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to Hospitality Help Hub</title>
+    <title>Hospitality Help Hub</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <div class="navbar">
-            <h1>Hospitality Help Hub</h1>
-            <input type="checkbox" id="nav-toggle" class="nav-toggle" aria-hidden="true">
-            <label for="nav-toggle" class="nav-toggle-label">
-                <span></span>
-            </label>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="owners.html">Owners</a></li>
-                    <li><a href="managers.html">Managers</a></li>
-                    <li><a href="staff.html">Staff</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-
+    <div class="navbar">
+        <h1>Hospitality Help Hub</h1>
+        <input type="checkbox" id="nav-toggle" class="nav-toggle">
+        <label for="nav-toggle" class="nav-toggle-label">
+            <span></span>
+        </label>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="owners.html">Owners</a></li>
+                <li><a href="managers.html">Managers</a></li>
+                <li><a href="staff.html">Staff</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
     <main>
         <section class="hero" style="background-image: url('Images/helpdesk.webp');">
             <div class="container">
@@ -44,7 +43,7 @@
                     <div class="text-side">
                         <h3>Overcoming Industry Challenges</h3>
                         <p>Adapt and thrive amid industry shifts. Explore strategies for resilience and success.</p>
-                        <a href="owners.html">Advice for Owners</a> | <a href="managers.html">Guidance for Managers</a>
+                        <a href="owners.html">Advice for Owners</a> <a href="managers.html">Guidance for Managers</a>
                     </div>
                 </article>
                 <article class="article-right">
@@ -70,17 +69,44 @@
                     <div class="text-side">
                         <h3>Community Support</h3>
                         <p>Engage with your peers and build a supportive network.</p>
-                        <a href="community.html">Join Our Community</a>
+                        <label for="communityPopupCheckbox" class="popup-button">Join Our Community</label>
                     </div>
                 </article>
             </div>
         </section>
     </main>
 
-    <footer>
+   
+    <input type="checkbox" id="communityPopupCheckbox" class="popup-checkbox">
+    <div class="popup-container" id="communityPopup">
+    <div class="popup-content">
+        <label for="communityPopupCheckbox" class="close-btn">&times;</label>
+        <h2>Join Our Community</h2>
+        <p>Connect with us on different platforms:</p>
+
+        <div>
+            <img class="media-icon" src="Images/whatsapp (1).png" alt="WhatsApp">
+            <a href="https://whatsapp.com" target="_blank">Join WhatsApp Group</a>
+        </div>
+        <div>
+            <img class="media-icon" src="Images/facebook (1).png" alt="Facebook">
+            <a href="https://facebook.com" target="_blank">Join Facebook Group</a>
+        </div>
+
+        <h3 class="subscribe-head">Subscribe to our Newsletter</h3>
+        <form>
+            <input class="email-input" type="email" placeholder="Your Email" required>
+            <input class="sub-button" type="submit" value="Subscribe">
+        </form>
+    </div>
+</div>
+
+</div>
+ <footer>
         <div class="container">
             <p>&copy; 2023 Hospitality Help Hub. All rights reserved.</p>
         </div>
     </footer>
+  
 </body>
 </html>
