README and responsiveness

--- a/index.html
+++ b/index.html
@@ -107,6 +107,8 @@
             <p>&copy; 2023 Hospitality Help Hub. All rights reserved.</p>
         </div>
     </footer>
-  
+  <a href="https://www.flaticon.com/free-icons/whatsapp" title="whatsapp icons">Whatsapp icons created by Pixel perfect - Flaticon</a>
+
+<a href="https://www.flaticon.com/free-icons/facebook" title="facebook icons">Facebook icons created by Hight Quality Icons - Flaticon</a>
 </body>
 </html>
