fix image ref and extara /div

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="container">
                 <article class="article-left">
                     <div class="image-side">
-                        <img src="Images/challenge food.jpeg" alt="Industry Challenges">
+                        <img src="Images/challenge-food.jpeg" alt="Industry Challenges">
                         <div class="overlay">
                             <p>"Every challenge leads to growth."</p>
                         </div>
@@ -61,7 +61,7 @@
                 </article>
                 <article class="article-left">
                     <div class="image-side">
-                        <img src="Images/team strenght.jpeg" alt="Community Support">
+                        <img src="Images/team-strenght.jpeg" alt="Community Support">
                         <div class="overlay">
                             <p>"Together, we can overcome any obstacle."</p>
                         </div>
@@ -85,11 +85,11 @@
         <p>Connect with us on different platforms:</p>
 
         <div>
-            <img class="media-icon" src="Images/whatsapp (1).png" alt="WhatsApp">
+            <img class="media-icon" src="Images/whatsapp-icon.png" alt="WhatsApp">
             <a href="https://whatsapp.com" target="_blank">Join WhatsApp Group</a>
         </div>
         <div>
-            <img class="media-icon" src="Images/facebook (1).png" alt="Facebook">
+            <img class="media-icon" src="Images/facebook-iconwhatsapp-icon.png" alt="Facebook">
             <a href="https://facebook.com" target="_blank">Join Facebook Group</a>
         </div>
 
@@ -99,9 +99,7 @@
             <input class="sub-button" type="submit" value="Subscribe">
         </form>
     </div>
-</div>
-
-</div>
+    </div> 
  <footer>
         <div class="container">
             <p>&copy; 2023 Hospitality Help Hub. All rights reserved.</p>
