--- a/owners.html
+++ b/owners.html
@@ -62,7 +62,7 @@
                 </article>
                 <article class="article-left">
                     <div class="image-side">
-                        <img src="Images/staff training.jpg" alt="Staff Management">
+                        <img src="Images/staff-training.jpg" alt="Staff Management">
                         <div class="overlay">
                             <p>"Cultivate a skilled and motivated team."</p>
                         </div>
