--- a/staff.html
+++ b/staff.html
@@ -59,7 +59,7 @@
             <div class="container">
                 <article class="article-left">
                     <div class="image-side">
-                        <img src="Images/burnt chef logo2.jpeg" alt="The Burnt Chef Project">
+                        <img src="Images/burnt-chef-logo2.jpeg" alt="The Burnt Chef Project">
                         <div class="overlay">
                             <p>"Empowering mental health support."</p>
                         </div>
